Improved fromatting, naming, changed design of WPF app

--- a/TPA_DGMK/Wpf/MainWindow.xaml
+++ b/TPA_DGMK/Wpf/MainWindow.xaml
@@ -12,11 +12,11 @@
         <local:WpfFileSelector x:Key="FileSelector"/>
     </Window.Resources>
 
-    <Grid>
-        <TreeView Name="TreeView" RenderTransformOrigin="0.5,0.5" ItemsSource="{Binding Items}" Canvas.Left="10" Canvas.Top="60" ScrollViewer.HorizontalScrollBarVisibility="Visible" Margin="10,110,11.6,10.4" Background="Honeydew">
+    <Grid Name="grid">
+        <TreeView Name="TreeView" RenderTransformOrigin="0.5,0.5" ItemsSource="{Binding Items}" Canvas.Left="10" Canvas.Top="60" ScrollViewer.HorizontalScrollBarVisibility="Visible" Margin="0,110,0,10" >
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Path=Children}">
-                    <TextBlock Text="{Binding Path=Name}" Margin="0,0,4,0" />
+                    <TextBlock Foreground="White" FontWeight="Bold" FontSize="16px" FontFamily="Verdana" Text="{Binding Path=Name}" Margin="0,0,4,0" />
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
             <TreeView.ItemContainerStyle>
@@ -25,6 +25,6 @@
                 </Style>
             </TreeView.ItemContainerStyle>
         </TreeView>
-        <Button Command="{Binding ReadCommand}" Content="Load dll" HorizontalAlignment="Left" Margin="360,30,0,0" VerticalAlignment="Top" Width="256" RenderTransformOrigin="0.389,-9.6" Height="59"/>
+        <Button Name="button" Command="{Binding ReadCommand}" Content="Load dll" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0"  Width="1006" RenderTransformOrigin="0.389,-9.6" Height="95"/>
     </Grid>
 </Window>
