--- a/TPA_DGMK/Wpf/MainWindow.xaml
+++ b/TPA_DGMK/Wpf/MainWindow.xaml
@@ -25,6 +25,8 @@
                 </Style>
             </TreeView.ItemContainerStyle>
         </TreeView>
-        <Button Name="button" Command="{Binding ReadCommand}" Content="Load dll" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0"  Width="1006" RenderTransformOrigin="0.389,-9.6" Height="95"/>
+        <Button Name="button_load" Command="{Binding ReadCommand}" Content="Load dll" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="-600,10,0,0"  Width="200" RenderTransformOrigin="0.389,-9.6" Height="95"/>
+        <Button x:Name="button_serialize" Command="{Binding SerializeCommand}" Content="Serialize dll" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="600,10,0,0"  Width="200" RenderTransformOrigin="0.389,-9.6" Height="95"/>
+        <Button x:Name="button_deserialize" Command="{Binding DeserializeCommand}" Content="Deserialize dll" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0"  Width="200" RenderTransformOrigin="0.389,-9.6" Height="95"/>
     </Grid>
 </Window>
